Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment1
  labels: 
    app: frontenddemo1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontenddemo1
  template:
    metadata:
      labels:
        app: frontenddemo1
    spec:
      containers:
      -  name: my-apache
         image: httpd
         ports:
         -  containerPort: 80 

---

apiVersion: v1
kind: Service
metadata:
  name: my-service-demo
spec:
  selector:
    app: frontenddemo1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
