ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: stream1.punecloud.in           #Host based routing
    http:
      paths:    
      - pathType: Prefix
        path: /
        backend:
          service:
            name: my-service-demo
            port:
              number: 80
